Fix: #70. added rate limit headers in openapi spec (#107)
* openapi rate limit

* updated tags to controllers names

* changeset
